--- a/Felian/Views/CategoriaAnillos.xaml
+++ b/Felian/Views/CategoriaAnillos.xaml
@@ -1,73 +1,88 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Felian.Views.CategoriaAnillos">
+             x:Class="Felian.Views.CategoriaAnillos"
+             BackgroundColor="White">
     <ContentPage.Content>
         <Grid RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto"
               VerticalOptions="CenterAndExpand"
               ColumnDefinitions="*,*"
-              Padding="30,0,30,0">
+              Margin="30,-70,30,0">
+            <!--Busqueda-->
+            <SearchBar Grid.Row="0" Grid.Column="0"
+                               Grid.ColumnSpan="3" Placeholder="Busqueda"
+                               BackgroundColor="WhiteSmoke"/>
+            <!--Texto-->
+            <Label Text="Anillos"
+                   TextColor="Black"
+                   FontSize="28"
+                   Grid.Row="1"
+                   Grid.ColumnSpan="3"
+                   FontAttributes="Bold"/>
             <!--Producto y descripcion-->
             <!--Producto 1-->
-            <Frame Grid.Row="5"
+            <Frame Grid.Row="2"
                    Margin="10"
                    BorderColor="Black"
-                   HeightRequest="60"
-                   WidthRequest="60"
+                   HeightRequest="80"
+                   WidthRequest="80"
                    IsClippedToBounds="True"
                    HorizontalOptions="Center"
                    VerticalOptions="Center">
-                <Image Source="mariposa.png"
+                <ImageButton Source="anillo1"
                        Aspect="AspectFill"
                        Margin="-20"
                        HeightRequest="100"
-                       WidthRequest="100"/>
+                       WidthRequest="100"
+                             Clicked="ImageButton_Clicked"/>
             </Frame>
-            <Label Text="Collar Mariposa"
+            <Label Text="Anillo Diamantes"
                    TextColor="Black"
-                   Grid.Row="5"
+                   Grid.Row="2"
                    HorizontalTextAlignment="Start"
                    Grid.Column="1"
                    FontSize="Medium"/>
             <!--Producto 2-->
-            <Frame Grid.Row="5"
+            <Frame Grid.Row="3"
                    Margin="10"
                    BorderColor="Black"
-                   HeightRequest="60"
-                   WidthRequest="60"
+                   HeightRequest="80"
+                   WidthRequest="80"
                    IsClippedToBounds="True"
                    HorizontalOptions="Center"
                    VerticalOptions="Center">
-                <Image Source="mariposa.png"
+                <ImageButton Source="anillo2"
                        Aspect="AspectFill"
                        Margin="-20"
                        HeightRequest="100"
-                       WidthRequest="100"/>
+                       WidthRequest="100"
+                             Clicked="ImageButton_Clicked_1"/>
             </Frame>
-            <Label Text="Collar Mariposa"
+            <Label Text="Collar Diamante"
                    TextColor="Black"
-                   Grid.Row="5"
+                   Grid.Row="3"
                    HorizontalTextAlignment="Start"
                    Grid.Column="1"
                    FontSize="Medium"/>
             <!--Producto 3-->
-            <Frame Grid.Row="5"
+            <Frame Grid.Row="4"
                    Margin="10"
                    BorderColor="Black"
-                   HeightRequest="60"
-                   WidthRequest="60"
+                   HeightRequest="80"
+                   WidthRequest="80"
                    IsClippedToBounds="True"
                    HorizontalOptions="Center"
                    VerticalOptions="Center">
-                <Image Source="mariposa.png"
+                <ImageButton Source="anillo3"
                        Aspect="AspectFill"
                        Margin="-20"
                        HeightRequest="100"
-                       WidthRequest="100"/>
+                       WidthRequest="100"
+                             Clicked="ImageButton_Clicked_2"/>
             </Frame>
-            <Label Text="Collar Mariposa"
+            <Label Text="Collar Estrellas"
                    TextColor="Black"
-                   Grid.Row="5"
+                   Grid.Row="4"
                    HorizontalTextAlignment="Start"
                    Grid.Column="1"
                    FontSize="Medium"/>
@@ -75,18 +90,19 @@
             <Frame Grid.Row="5"
                    Margin="10"
                    BorderColor="Black"
-                   HeightRequest="60"
-                   WidthRequest="60"
+                   HeightRequest="80"
+                   WidthRequest="80"
                    IsClippedToBounds="True"
                    HorizontalOptions="Center"
                    VerticalOptions="Center">
-                <Image Source="mariposa.png"
+                <ImageButton Source="anillo4"
                        Aspect="AspectFill"
                        Margin="-20"
                        HeightRequest="100"
-                       WidthRequest="100"/>
+                       WidthRequest="100"
+                             Clicked="ImageButton_Clicked_3"/>
             </Frame>
-            <Label Text="Collar Mariposa"
+            <Label Text="Collar Perlado"
                    TextColor="Black"
                    Grid.Row="5"
                    HorizontalTextAlignment="Start"
