--- a/Felian/Views/anillo2pago.xaml
+++ b/Felian/Views/anillo2pago.xaml
@@ -12,7 +12,7 @@
                    Grid.Row="1"
                    FontSize="25"
                    Grid.ColumnSpan="3"/>
-            <Label Text="Nombre del producto"
+            <Label Text="Anillo Azul"
                    TextColor="Black"
                    Grid.Row="2"
                    Grid.ColumnSpan="3"
@@ -30,7 +30,7 @@
                    Grid.Row="6"
                    Grid.ColumnSpan="3"
                    FontSize="20"/>
-            <Label Text="Nombre de la vendedora"
+            <Label Text="Vendedora: Ariana Contreras"
                    TextColor="Black"
                    Grid.Row="7"
                    Grid.ColumnSpan="3"
