--- a/Felian/Views/anillo3.xaml
+++ b/Felian/Views/anillo3.xaml
@@ -15,7 +15,7 @@
                     Clicked="Button_Clicked"/>
 
             <!--Nombre del producto-->
-            <Label  Text="Collar Diamante"
+            <Label  Text="Anillo Hojas"
                     TextColor="Black"
                     Grid.Row="3"
                     Grid.ColumnSpan="2"
@@ -24,14 +24,9 @@
                     FontAttributes="Bold"/>
             <!--Imagen del producto-->
             <Image Source="anillo3"
-                   Margin="40,10,40,10"/>
-            <!--Descripcion-->
-            <Label Text="$160.00 antes"
-                   TextColor="#63A687"
-                   Grid.Row="5"
-                   FontSize="18"
-                   FontAttributes="Bold"/>
-            <Label Text="$143 AHORA"
+                   Margin="100,10,100,0"/>
+            <!--Descripcion-->  
+            <Label Text="$56.00"
                    TextColor="Black"
                    Grid.Row="5"
                    FontSize="18"
