--- a/Felian/Views/CompraRealizada.xaml
+++ b/Felian/Views/CompraRealizada.xaml
@@ -11,7 +11,7 @@
                    Grid.Row="1"
                    FontSize="25"
                    Grid.ColumnSpan="3"/>
-            <Label Text="Nombre del producto"
+            <Label Text="Collar mariposa"
                    TextColor="Black"
                    Grid.Row="2"
                    Grid.ColumnSpan="3"
